fixing spacing and artist name linked to Spotify

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -203,6 +203,10 @@ font-size:1.2rem;
     padding: 0;
     font-weight: 700;
 }
+#bands-in-town-band-name{
+    font-size: 2rem;
+    font-weight: 700;
+}
 /* #bands-in-town-list h5{
     font-size: 1rem;
     text-align: center;
